compiler/src/test/resources/golden/errors/type_not_bool.dawn
fn f() -> Bool = not 3
