compiler/src/test/resources/golden/errors/type_not_bool.err
error: not expects Bool, got Int
  --> type_not_bool.dawn:1:22
  |
1 | fn f() -> Bool = not 3
  |                      ^
